dist/1.0/bin/sample/retrieveUnpackaged/objects/TaskDescription__c.object
<CustomObject>
    <description>Description displayed on Task creation section. Informs about Task usage and required fields</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Task Category</description>
        <inlineHelpText>Task Category</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design and Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description visible on New Task sections</description>
        <inlineHelpText>Description visible on New Task sections</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Task Type</description>
        <inlineHelpText>Task Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Billing Configuration Rollback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Design &amp; Budgetary Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Rollback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Opportunity Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Billing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Start Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Stop Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Design Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Rollback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>